update basic documentation